base functions finished

--- a/catalog.html
+++ b/catalog.html
@@ -369,6 +369,8 @@
                 <li class="footer__share__list__element"><a href="#">Site map</a></li>
             </ul>
         </section>
+        <script src="data/catalog.js"></script>
+        <script src="data/best-offer.js"></script>
         <script src="js/start.js"></script>
     </footer>
 </body>
