--- a/item.html
+++ b/item.html
@@ -20,28 +20,34 @@
                 <a href="shopping-bag.html" class="header__login-bag__bag__wrapper">
                     <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
                         src="img/start/1300/ico_bag.png">
-                    <p class="header__login-bag__bag__text">Bag £<span id="bag_totalPrice">236.50</span> (<span id="bag_totalQuantity">4</span>)</p>
+                    <p class="header__login-bag__bag__text">Bag £<span id="bag_totalPrice">236.50</span> (<span
+                            id="bag_totalQuantity">4</span>)</p>
                 </a>
             </div>
             <div id="header__burger" class="header__burger">&#8801;</div>
         </section>
         <nav id="header__menu" class="header__menu">
             <ul class="header__menu__list">
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Women</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Women</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Men</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Men</a>
                 </li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
                         href="catalog.html">Handbags</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
                         href="catalog.html">Accessories</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Sale</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Sale</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">New
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">New
                         Arrivals</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
                         href="catalog.html">Clearance</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Store
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Store
                         Locator</a></li>
             </ul>
             <form action="" id="header__menu__search" class="header__menu__search">
@@ -79,10 +85,11 @@
                 </div>
             </div>
             <div class="item__content item__content--info">
-                <h2 class="item__heading">Dark classic fit suit</h2>
+                <h2 class="item__heading" id="item__heading">Dark classic fit suit</h2>
                 <p class="item__price--mobile">£180.60</p>
-                <p class="item__info">Featuring fine Italian wool, this elegant suit has pick-stitch edging, cascade buttons at the cuffs and a subtle stripe pattern throughout. </p>
-                <p class="item__price" id = "item__price">£180.60</p>
+                <p class="item__info">Featuring fine Italian wool, this elegant suit has pick-stitch edging, cascade
+                    buttons at the cuffs and a subtle stripe pattern throughout. </p>
+                <p class="item__price" id="item__price">£180.60</p>
                 <div class="item__select">
                     <p class="item__text">Size:</p>
                     <div class="item__wrapper">
@@ -93,7 +100,7 @@
                         <input class="item__radio" type="radio" name="item__size" id="item__size--54">
                         <label class="item__label" for="item__size--54">UK 54</label>
                     </div>
-                    
+
                     <div class="item__wrapper">
                         <input class="item__radio" type="radio" name="item__size" id="item__size--56">
                         <label class="item__label" for="item__size--56">UK 56</label>
@@ -110,7 +117,7 @@
                         <label class="item__label" for="item__color--blue">Blue</label>
                     </div>
                 </div>
-                <button class="item__button" id = "item__button">Add to bag</button>
+                <button class="item__button" id="item__button">Add to bag</button>
             </div>
         </div>
     </section>
@@ -198,8 +205,12 @@
                 <li class="footer__share__list__element"><a href="#">Site map</a></li>
             </ul>
         </section>
-        <script src="js/start.js"></script>
+
     </footer>
+    <script src="data/catalog.js"></script>
+    <script src="data/best-offer.js"></script>
+    <script src="js/start.js"></script>
+    <script src="js/item.js"></script>
 </body>
 
 </html>
