--- a/start.html
+++ b/start.html
@@ -26,21 +26,26 @@
         </section>
         <nav id="header__menu" class="header__menu">
             <ul class="header__menu__list">
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Women</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Women</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Men</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Men</a>
                 </li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
                         href="catalog.html">Handbags</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
                         href="catalog.html">Accessories</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Sale</a>
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Sale</a>
                 </li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">New
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">New
                         Arrivals</a></li>
                 <li class="header__menu__list__element"><a class="header__menu__list__element__link"
                         href="catalog.html">Clearance</a></li>
-                <li class="header__menu__list__element"><a class="header__menu__list__element__link" href="catalog.html">Store
+                <li class="header__menu__list__element"><a class="header__menu__list__element__link"
+                        href="catalog.html">Store
                         Locator</a></li>
             </ul>
             <form action="" id="header__menu__search" class="header__menu__search">
@@ -85,9 +90,9 @@
             <div class="bestOffer__content__wrapper">
                 <img class="bestOffer__content__angle" alt="angle-up" src="img/start/1300/angle-up.png">
                 <a href="item.html">
-                <div class="bestOffer__content__image__wrapper  bestOffer__content__image__wrapper--second">
+                    <div class="bestOffer__content__image__wrapper  bestOffer__content__image__wrapper--second">
 
-                </div>
+                    </div>
                 </a>
                 <h3 class="bestOffer__content__title">Levi’s Jeans for women</h3>
                 <p class="bestOffer__content__price">£95.50</p>
@@ -100,7 +105,8 @@
                         alt="strikeout">
                 </p>
                 <p class="bestOffer__content__total__new">£146.00</p>
-                <a href="shopping-bag.html"><button class="bestOffer__content__total__bag-button">Add to bag</button></a>
+                <a href="shopping-bag.html"><button class="bestOffer__content__total__bag-button">Add to
+                        bag</button></a>
             </div>
         </div>
         <a href="shopping-bag.html"><button class="bestOffer__bag-button">Add to bag</button></a>
@@ -222,6 +228,8 @@
         </section>
 
     </footer>
+    <script src="data/catalog.js"></script>
+    <script src="data/best-offer.js"></script>
     <script src="js/start.js"></script>
 </body>
 
