--- a/item.html
+++ b/item.html
@@ -76,12 +76,24 @@
                         class="item__content__img">
                 </div>
                 <div class="item__content__thumb__wrapper">
-                    <img src="img/item/thumb_0.png" title="Dark classic fit suit" alt="Dark classic fit suit"
-                        class="item__content__thumb">
-                    <img src="img/item/thumb_1.png" title="Dark classic fit suit" alt="Dark classic fit suit"
-                        class="item__content__thumb">
-                    <img src="img/item/thumb_2.png" title="Dark classic fit suit" alt="Dark classic fit suit"
-                        class="item__content__thumb">
+                    <div class="item__thumb">
+                        <img src="img/item/full.png" title="Dark classic fit suit" alt="Dark classic fit suit"
+                            class="item__content__thumb">
+                        <img src="img/item/selected.png" alt="selected"
+                            class="item__content__selected item__content__selected--visible">
+                    </div>
+                    <div class="item__thumb">
+                        <img src="img/item/thumb_1.png" title="Dark classic fit suit" alt="Dark classic fit suit"
+                            class="item__content__thumb">
+                        <img src="img/item/selected.png" alt="selected"
+                            class="item__content__selected ">
+                    </div>
+                    <div class="item__thumb">
+                        <img src="img/item/thumb_2.png" title="Dark classic fit suit" alt="Dark classic fit suit"
+                            class="item__content__thumb">
+                        <img src="img/item/selected.png" alt="selected"
+                            class="item__content__selected ">
+                    </div>
                 </div>
             </div>
             <div class="item__content item__content--info">
